--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,17 @@
         <span>Previous</span>
     {% endif %}
 
-    <span>Page {{ pagination.page }} of {{ pagination.pages }}</span>
+    {% for page_num in pagination.iter_pages(left_edge=2, right_edge=2, left_current=2, right_current=2) %}
+        {% if page_num %}
+            {% if page_num == pagination.page %}
+                <strong>{{ page_num }}</strong>
+            {% else %}
+                <a href="{{ url_for('routes.index', page=page_num) }}">{{ page_num }}</a>
+            {% endif %}
+        {% else %}
+            <span>…</span>
+        {% endif %}
+    {% endfor %}
 
     {% if pagination.has_next %}
         <a href="{{ url_for('routes.index', page=pagination.next_num) }}">Next</a>
@@ -26,4 +36,3 @@
     {% endif %}
 </div>
 {% endblock %}
-
