--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,13 +6,13 @@
 <h2>Person List</h2>
 <ul>
     {% for person in people %}
-    <li>{{ person.name }} - <a href="{{ url_for('routes.person', id=person.id) }}">{{ person.city }}</a></li>
+    <li>{{ person.name }} - <a href="{{ url_for('routes.person', id=person.id, prev_page=pagination.page) }}">Profil</a></li>
     {% endfor %}
 </ul>
 
 <div class="pagination">
     {% if pagination.has_prev %}
-        <a href="{{ url_for('routes.index', page=pagination.prev_num) }}">Previous</a>
+        <a href="{{ url_for('routes.index', page=pagination.prev_num, prev_page=pagination.page) }}">Previous</a>
     {% else %}
         <span>Previous</span>
     {% endif %}
@@ -22,7 +22,7 @@
             {% if page_num == pagination.page %}
                 <strong>{{ page_num }}</strong>
             {% else %}
-                <a href="{{ url_for('routes.index', page=page_num) }}">{{ page_num }}</a>
+                <a href="{{ url_for('routes.index', page=page_num, prev_page=pagination.page) }}">{{ page_num }}</a>
             {% endif %}
         {% else %}
             <span>…</span>
@@ -30,7 +30,7 @@
     {% endfor %}
 
     {% if pagination.has_next %}
-        <a href="{{ url_for('routes.index', page=pagination.next_num) }}">Next</a>
+        <a href="{{ url_for('routes.index', page=pagination.next_num, prev_page=pagination.page) }}">Next</a>
     {% else %}
         <span>Next</span>
     {% endif %}
