--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
 
 <ul>
     {% for person in people %}
-    <li>{{ person.name }} - {{ person.city }} - <a href="{{ url_for('routes.person', id=person.id, prev_page=pagination.page) }}">Profil</a></li>
+    <li>{{ person.name }} -> <a href="{{ url_for('routes.person', id=person.id, prev_page=pagination.page) }}">Profil</a></li>
     {% endfor %}
 </ul>
 
