--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>My App</h1>
+        <h1>Persondata</h1>
         <nav>
             <a href="{{ url_for('routes.index') }}">Home</a>
         </nav>
     </header>
+    
 
     <main>
         {% block content %}{% endblock %}
