--- a/app/templates/person.html
+++ b/app/templates/person.html
@@ -9,5 +9,12 @@
 <p><strong>Country:</strong> {{ person.country }}</p>
 <p><strong>Profession:</strong> {{ person.profession }}</p>
 <p><strong>Phone Number:</strong> {{ person.phone_number }}</p>
-<a href="{{ url_for('routes.index', page=prev_page) }}">Back to List</a>
+
+<a href="{{ url_for('routes.index', 
+    page=prev_page, 
+    search=search_query, 
+    sort_by=sort_by, 
+    sort_order=sort_order, 
+    filter_celebs=filter_celebs) }}">Back to List</a>
 {% endblock %}
+
